tests/snapshots/integration__integration_tests__switch__switch_error_missing_directory.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - missing-wt
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpRE0hzi/test-config.toml
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
❌ [31mWorktree directory missing for [1m[31mmissing-wt[0m[0m

💡 [2mRun 'git worktree prune' to clean up[0m
